--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,10 @@
             <groupId>dom4j</groupId>
             <artifactId>dom4j</artifactId>
         </dependency>
+        <dependency>
+             <groupId>org.apache.ws.commons.axiom</groupId>
+             <artifactId>axiom-api</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
