添加上传ftp和http调用方法到rjxx-comm里面

--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,11 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>com.jcraft</groupId>
+			<artifactId>jsch</artifactId>
+			<version>0.1.46</version>
+		</dependency>
 	</dependencies>
 
 </project>
